--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dev_dependencies:
   simple_animations: ^2.3.1
   page_transition: "^1.1.7+2"
   auto_size_text: ^2.1.0
-  provider: ^4.3.2+2
+  image_picker: ^0.6.7+14
+  permission_handler: ^5.0.1+1
+
 
 
 # For information on the generic Dart part of this file, see the
@@ -73,6 +75,9 @@ flutter:
     - family: Sansita Swashed
       fonts:
         - asset: assets/SansitaSwashed.ttf
+    - family: Pacifico
+      fonts:
+        - asset: assets/Pacifico.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
